@@ -1,3 +1,8 @@
+2010-05-19  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb, lib/gluon/po.rb: autoid option is
+	defined at each HTML element generator.
+
 2010-05-17  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb, lib/gluon/po.rb: optional prefix for
